trunk/Archive2/90/a3ef9983f65b84/output
main.cpp:1:40: error: 'shared_ptr' does not name a type
 template <class T, class A1, class A2> shared_ptr<T> factory(A1&& a1, A2&& a2) {
                                        ^
main.cpp: In function 'void g()':
main.cpp:10:5: error: 'shared_ptr' was not declared in this scope
     shared_ptr<A> sp1 = factory<A> (2, 1.414);  // error: 2 will not bind to int&
     ^
main.cpp:10:17: error: expected primary-expression before '>' token
     shared_ptr<A> sp1 = factory<A> (2, 1.414);  // error: 2 will not bind to int&
                 ^
main.cpp:10:19: error: 'sp1' was not declared in this scope
     shared_ptr<A> sp1 = factory<A> (2, 1.414);  // error: 2 will not bind to int&
                   ^
main.cpp:10:25: error: 'factory' was not declared in this scope
     shared_ptr<A> sp1 = factory<A> (2, 1.414);  // error: 2 will not bind to int&
                         ^
main.cpp:10:34: error: expected primary-expression before '>' token
     shared_ptr<A> sp1 = factory<A> (2, 1.414);  // error: 2 will not bind to int&
                                  ^
main.cpp:10:40: warning: left operand of comma operator has no effect [-Wunused-value]
     shared_ptr<A> sp1 = factory<A> (2, 1.414);  // error: 2 will not bind to int&
                                        ^
main.cpp:12:17: error: expected primary-expression before '>' token
     shared_ptr<A> sp2 = factory<A> (i, 1.414);  // OK
                 ^
main.cpp:12:19: error: 'sp2' was not declared in this scope
     shared_ptr<A> sp2 = factory<A> (i, 1.414);  // OK
                   ^
main.cpp:12:34: error: expected primary-expression before '>' token
     shared_ptr<A> sp2 = factory<A> (i, 1.414);  // OK
                                  ^
main.cpp:12:40: warning: left operand of comma operator has no effect [-Wunused-value]
     shared_ptr<A> sp2 = factory<A> (i, 1.414);  // OK
                                        ^
